--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 #splash, #end {
-  background: linear-gradient(135deg, #1e5799 0%,#530060 0%,#c70881 88%);
+  background: linear-gradient(135deg,#1e5799,#530060,#c70881);
   background-attachment: fixed;
   width: 100%;
   height: 100vh;
@@ -74,57 +74,56 @@ input[type=checkbox]
   height: 1em;
 }
 /* dropdown */
-    .dropdown dd, .dropdown dt, .dropdown ul {
-      margin:0px;
-      padding:0px;
-    }
-    .dropdown dd {
-      position:relative;
-    }
-    .dropdown a, .dropdown a:visited {
-      color:#000000;
-      text-decoration:none;
-      outline:none;
-    }
-    .dropdown dt a {
-      background: url('http://www.jankoatwarpspeed.com/wp-content/uploads/examples/reinventing-drop-down/arrow.png') no-repeat scroll right center;
-      display:block;
-      padding-right:5px;
-      width:90px;}
-    .dropdown dt a span {
-      cursor:pointer;
-      display:block;
-      padding:5px;}
-    .dropdown dd ul {
-      background: none repeat scroll 0 0;
-      color:#C5C0B0;
-      display:none;
-      left:0px;
-      padding:5px 0px;
-      position:absolute;
-      top:2px;
-      width:auto;
-      min-width:60px;
-      list-style:none;
-    }
-    .dropdown span.value {
-      display:none;
-    }
-    .dropdown dd ul li a {
-      padding:5px;
-      display:block;
-    }
-    .dropdown img.flag {
-      margin-top:10px;
-      display:inline-block;
-    }
-    .flagvisibility {
-      display:none;
-    }
-    .flags, .codes, .innumb{
-    display: inline-block;
-    }
-  #codes {
-    color: rgb(138, 136, 134);
-    padding-top: 8%;
-  }
+.dropdown dd, .dropdown dt, .dropdown ul {
+  margin:0px;
+  padding:0px;
+}
+.dropdown dd {
+  position:relative;
+}
+.dropdown a, .dropdown a:visited {
+  color:#000000;
+  text-decoration:none;
+  outline:none;
+}
+.dropdown dt a {
+  background: url('http://www.jankoatwarpspeed.com/wp-content/uploads/examples/reinventing-drop-down/arrow.png') no-repeat scroll right center;
+  display:block;
+  padding-right:5px;
+  width:90px;}
+.dropdown dt a span {
+  cursor:pointer;
+  display:block;
+  padding:5px;}
+.dropdown dd ul {
+  background: none repeat scroll 0 0;
+  color:#C5C0B0;
+  display:none;
+  padding:5px 0px;
+  position:absolute;
+  top:2px;
+  width:auto;
+  min-width:60px;
+  list-style:none;
+}
+.dropdown span.value {
+  display:none;
+}
+.dropdown dd ul li a {
+  padding:5px;
+  display:block;
+}
+.dropdown img.flag {
+  margin-top:10px;
+  display:inline-block;
+}
+.flagvisibility {
+  display:none;
+}
+.flags, .codes, .innumb{
+  display: inline-block;
+}
+#codes {
+  color: rgb(138, 136, 134);
+  padding-top: 8%;
+}
